# mimic-siwis_fr_zoe_hts

./: meson.build  meson_options.txt
include/: siwis_fr_zoe_hts.h
src/: siwis_fr_zoe_hts.c  siwis_fr_zoe_hts_plugin.c
